--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "migration:run": "npm run typeorm migration:run -- -d ./src/config/typeorm.config.ts",
     "migration:revert": "npm run typeorm migration:revert -- -d ./src/config/typeorm.config.ts",
     "migration:generate": "npm run typeorm -- migration:generate  ./src/migrations/$npm_config_name -d ./src/config/typeorm.config.ts",
-    "migration:show": "npm run typeorm -- migration:show -d ./src/config/typeorm.config.ts"
+    "migration:show": "npm run typeorm -- migration:show -d ./src/config/typeorm.config.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -50,6 +51,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
     "pg": "^8.13.1",
     "prettier": "^3.0.0",
